--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,12 @@
-body {
+html{
+  box-sizing: border-box;
+}
+
+#root, html, body{
   margin: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
